# dina_zmve

./: .gitignore  README.md  platformio.ini  sonar-project.properties
.github/workflows/: ci-stm-pio-platform.yml  cmake-multi-platform.yml
src/: CMakeLists.txt  STM32H753ZITx_FLASH.ld  master.map  slave.map
src/Core/Inc/: board.master.h  board.slave.h  dummy.h  main.h
src/Core/Src/: board.master.cpp  board.slave.cpp  dummy.cpp  main.cpp  stm32h7xx_hal_msp.c
src/cmake/: CMakeLists.txt
src/ioc/master/: .cproject  .mxproject  .project  Console.txt  master.ioc  sonar-project.properties
src/ioc/master/Core/Inc/: main.h  stm32h7xx_hal_conf.h
src/ioc/master/Core/Src/: main.c  stm32h7xx_hal_msp.c
src/ioc/master/Debug/: master.elf  master.list  master.map
src/ioc/master/Debug/Core/Src/: main.cyclo  main.su  stm32h7xx_hal_msp.cyclo  stm32h7xx_hal_msp.su  subdir.mk
src/ioc/master/Debug/Core/Startup/: subdir.mk
src/ioc/slave/: .cproject  .project  Console.txt  platformio.ini  slave.ioc
src/ioc/slave/Core/Inc/: main.h
src/ioc/slave/Core/Src/: main.c  stm32h7xx_hal_msp.c
src/ioc/slave/Debug/: slave.elf  slave.list  slave.map
src/ioc/slave/Debug/Core/Src/: main.cyclo  main.su  stm32h7xx_hal_msp.cyclo  stm32h7xx_hal_msp.su
src/ioc/slave/Debug/Drivers/STM32H7xx_HAL_Driver/Src/: subdir.mk
src/lib/: lib.cpp  lib.h  test1.cpp  test2.cpp
